--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "whisper-webgpu",
+  "name": "whisper-web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,33 +12,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.2",
-    "@huggingface/transformers": "3.3.3",
+    "@headlessui/react": "^2.2.4",
+    "@huggingface/transformers": "3.5.2",
     "axios": "^1.9.0",
-    "i18next": "^25.1.2",
+    "i18next": "^25.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-i18next": "^15.5.1"
+    "react-i18next": "^15.5.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.26.0",
+    "@eslint/js": "^9.28.0",
     "@iconify-json/circle-flags": "^1.2.6",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
-    "@tailwindcss/vite": "^4.1.5",
-    "@types/react": "^19.1.3",
-    "@types/react-dom": "^19.1.3",
-    "@vitejs/plugin-react": "^4.4.1",
+    "@tailwindcss/vite": "^4.1.8",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.5",
+    "@vitejs/plugin-react": "^4.5.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.26.0",
+    "eslint": "^9.28.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.1.0",
-    "postcss": "^8.5.3",
+    "globals": "^16.2.0",
+    "postcss": "^8.5.4",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4.1.5",
+    "tailwindcss": "^4.1.8",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.0",
+    "typescript-eslint": "^8.33.0",
     "unplugin-icons": "^22.1.0",
     "vite": "^6.3.5"
   }
