--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@huggingface/transformers": "3.5.2",
     "axios": "^1.9.0",
     "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^7.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.2"
