--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,24 @@
-worker_processes 1;
-events { worker_connections 1024; }
-http {
-    include       mime.types;
-    default_type  application/octet-stream;
-    sendfile        on;
-    server {
-        listen 8080;
-        root /usr/share/nginx/html;
-        add_header Cross-Origin-Embedder-Policy "require-corp" always;
-        add_header Cross-Origin-Opener-Policy "same-origin" always;
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
+server {
+    listen 8080;
+    server_name localhost;
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Gestion des fichiers statiques
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        try_files $uri =404;
     }
+
+    # SPA fallback pour toutes les autres routes
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    # Optimisations
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
 }
