--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.5.0",
+    "@webgpu/types": "^0.1.61",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.28.0",
     "eslint-plugin-react-hooks": "^5.2.0",
