--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 package-lock.json
-whisper-speaker-diarization/*
+whisper-speaker-diarization/
 
 node_modules
 dist
