feat(transcription): add speaker diarization and color coding
- Implement speaker diarization pipeline with improved clustering
- Add speaker color coding for better visual distinction
- Introduce virtualized transcript list for performance
- Add export functionality for TXT, JSON and SRT formats
- Improve timestamp formatting and UI responsiveness
- Update dependencies including i18next and react-window

--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@headlessui/react": "^2.2.4",
     "@huggingface/transformers": "3.5.2",
     "axios": "^1.9.0",
-    "i18next": "^25.2.1",
+    "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^7.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-i18next": "^15.5.2"
+    "react-i18next": "^15.6.0",
+    "react-window": "^1.8.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
@@ -29,6 +30,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
+    "@types/react-window": "^1.8.8",
     "@vitejs/plugin-react": "^4.5.0",
     "@webgpu/types": "^0.1.61",
     "autoprefixer": "^10.4.21",
